--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 3100
 
 # spa-title
-VITE_GLOB_APP_TITLE = Vben Admin
+VITE_GLOB_APP_TITLE = 校园公共资源管理系统
 
 # spa shortname
 VITE_GLOB_APP_SHORT_NAME = vue_vben_admin
